--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --open",
-    "build": "rm -rf dist && webpack",
+    "build": "rm -rf dist && webpack --config webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
   "devDependencies": {
     "css-loader": "^5.1.3",
     "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.3.9",
     "style-loader": "^2.0.0",
     "webpack": "^5.26.0",
     "webpack-cli": "^4.5.0",
